# vulkan-dual-gpu-poc

./: CMakeLists.txt  README.md
docs/: DEVICE_GROUP_PIVOT.md
scripts/: build_shaders.sh
shaders/: blit.frag  fullscreen.vert  passthrough.comp
src/: app.cpp  app.h  device_a_present.cpp  device_a_present.h  device_b_render.cpp  device_b_render.h  device_group.cpp  device_group.h  frame_mailbox.h  gpu_select.cpp  gpu_select.h  gpu_timestamps.cpp  gpu_timestamps.h  main.cpp  shared_buffer.cpp  shared_buffer.h  shared_image.cpp  shared_image.h  timeline_sync.cpp  timeline_sync.h  util.h  vk_instance.cpp  vk_instance.h
